--- a/CONTAGEM/style.css
+++ b/CONTAGEM/style.css
@@ -2,10 +2,10 @@
 
 :root {
     --cor-de-fundo:#333333;
-    --texto1:#6FFF57;
-    --texto2:#FFFFFF;
-    --botao-ativo:#3A375E;
-    --botao-inativo:rgba(58,55,94,0.5);
+    --texto1:#ff0000;
+    --texto2:#ffffff;
+    --botao-ativo:#6b6794;
+    --botao-inativo:rgba(23, 18, 85, 0.5);
     --texo-fundo:rgba(58,55,94,0.3);
 }
 
@@ -26,7 +26,7 @@ body{
     color: var(--texto1);
     justify-content: center;
     padding: 1em;
-    font-size: 60px;
+    font-size: 50px;
     align-items: center;
     width:100%;
 }
@@ -38,11 +38,29 @@ body{
     align-items: center;
     max-width: 100%;
     margin: 0 auto;
-
+    height: 100vh;
+    background-image: url(img/Bomba.webp);
+    background-repeat: no-repeat;
 }
 
 .tituloprincipal {
     text-align: left;
     width: 100%;
     font-size: 45px;
+}
+
+.botoes {
+    display: flex;
+}
+.botao:first-child {
+    border-radius:40px 0 0 0;
+}
+
+.botao:last-child {
+    border-radius:0 40px 0 0;
+}
+
+.ativo {
+    background:var(--botao-ativo);
+    border-bottom: 7px solid rgb(251, 226, 0);
 }
